Alterações na Classe Oscar e Classe ManipulacaoArquivo